--- a/Cap.html
+++ b/Cap.html
@@ -170,7 +170,7 @@
             <h1 class="product-title">YWF Cap</h1>
             <p class="product-description">Our stylish YWF Cap is perfect for any occasion. Made with high-quality materials, it offers comfort and a trendy look. Available in various colors.</p>
             <div class="product-price">€19.99</div>
-            <a href="purchase.html" class="buy-button">Buy Now</a>
+            <a href="cappurchase.html" class="buy-button">Buy Now</a>
         </div>
     </div>
 
