--- a/shop.html
+++ b/shop.html
@@ -211,7 +211,7 @@
                     <h2>Cap</h2>
                     <p>Descrição do produto.</p>
                     <div class="price">€29.99</div>
-                    <button class="button">Add to Cart</button>
+                    <a href="cappurchase.html" class="button">Add to Cart</a> <!-- Redireciona para a página de compra do Cap -->
                 </div>
             </div>
             <!-- Produto: Sweatshirt -->
@@ -221,7 +221,7 @@
                     <h2>Sweatshirt</h2>
                     <p>Descrição do produto.</p>
                     <div class="price">€39.99</div>
-                    <button class="button">Add to Cart</button>
+                    <a href="sweatshirtpurchase.html" class="button">Add to Cart</a> <!-- Redireciona para a página de compra da Sweatshirt -->
                 </div>
             </div>
             <!-- Produto: Puffer -->
@@ -231,7 +231,7 @@
                     <h2>Puffer</h2>
                     <p>Descrição do produto.</p>
                     <div class="price">€99.99</div>
-                    <button class="button">Add to Cart</button>
+                    <a href="pufferpurchase.html" class="button">Add to Cart</a> <!-- Redireciona para a página de compra do Puffer -->
                 </div>
             </div>
             <!-- Produto: T-shirt -->
@@ -241,7 +241,7 @@
                     <h2>T-shirt</h2>
                     <p>Descrição do produto.</p>
                     <div class="price">€19.99</div>
-                    <button class="button">Add to Cart</button>
+                    <a href="tshirtpurchase.html" class="button">Add to Cart</a> <!-- Redireciona para a página de compra da T-shirt -->
                 </div>
             </div>
         </div>
