--- a/tshirtpurchase.html
+++ b/tshirtpurchase.html
@@ -288,7 +288,7 @@
                 </div>
             </div>
             <!-- Formulário de compra -->
-            <form action="process_purchase.php" method="POST">
+            <form id="purchase-form">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
@@ -338,6 +338,13 @@
             const quantity = quantityInput.value;
             const total = (unitPrice * quantity).toFixed(2);
             totalDisplay.textContent = `${total}€`; // Atualiza o total exibido com euros
+        });
+
+        // Adiciona o evento de envio do formulário
+        document.getElementById('purchase-form').addEventListener('submit', (event) => {
+            event.preventDefault(); // Previne o envio padrão do formulário
+            // Redireciona para a página de confirmação
+            window.location.href = 'orderconfirmation.html';
         });
     </script>
 </body>
